# TeleNav

./: .gitignore  README.md  frames_2025-03-17_20.13.16.gv  house_map.pgm  house_map.yaml  map.pgm  map.yaml  my_map.pgm  my_map.yaml  ros_params.yml  setup_packages.sh
.devcontainer/: devcontainer.json
bumberbot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bumberbot_ws/log/: latest_build
doku/: RoboterModelling.md  Simluation.md  ros_basics.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
navigation_ws/: Readme.md
navigation_ws/install/: local_setup.sh  setup.sh
navigation_ws/log/: latest_build
project_ws/: readme.md
project_ws/install/: local_setup.sh  setup.sh
project_ws/log/: latest_build
ros2_udemy_ws/install/: local_setup.sh  setup.sh
ros2_udemy_ws/log/: latest_build  latest_list
ros2_udemy_ws/src/cpp_package/: CMakeLists.txt
ros2_udemy_ws/src/cpp_package/src/: my_first_cpp_note.cpp
simulation_dtour_ws/: Readme.md
simulation_dtour_ws/install/: local_setup.sh  setup.sh
simulation_dtour_ws/log/: latest_build
simulation_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simulation_ws/log/: latest_build  latest_list
simulation_ws/src/my_robot_description/: CMakeLists.txt
simulation_ws/src/my_robot_description/launch/: course.launch.xml
simulation_ws/src/my_robot_description/meshes/: mosro.stl
simulation_ws/src/my_robot_description/urdf/: common_properties.xacro  lidar.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  robot.urdf.xacro
simulation_ws/src/my_robot_description/urdf_course/: robot.urdf
test_workspace/log/: latest_build
(+548 files in other folders)
